# AISafetyTemplate

./: .env.example  README.md  memo.md
inspection/: helm-version.md  llm-interface.md
investigation/: evaluation-dependancies.md  helm-3-scenarios.md  list-datasets.md  oss-evals-list.md  readme.md  unsafe-code-patterns.md
investigation/properties/: README.md
investigation/repos/: README.md  harness.md  helm.md  inspectAI.md
investigation/repos/METR/: map.md  overview.md
src/: .env.example  .gitignore  Dockerfile  README.md  USAGE.md  build_controller.sh  claudecode-prompt-init  config.yaml  docker-compose.yml  requirements.txt  run.sh  test_proxy.sh
src/controller/: CMakeLists.txt
src/controller/include/: controller.h
src/controller/python/: controller.py
src/controller/src/: controller.cpp  dataset_manager.cpp  helm_wrapper.cpp  security.cpp
src/eval_container/: Dockerfile  SECURITY.md  download_datasets.sh  download_offline_packages.sh  requirements.txt
src/eval_container/offline_datasets/: .gitkeep
src/eval_container/offline_packages/: .gitkeep
src/helm_config/: model_deployments.yaml  model_metadata.yaml  run_entries.conf
src/llm_proxy/: Dockerfile  requirements.txt  server.py
src/sandbox/: Dockerfile  compose.yml  lite_llm_config.yml
src/sandbox/helm_config/: model_deployments.yaml  model_metadata.yaml  run_entries.conf
src/user_component/boilerplate/: my_eval.py
src/user_component/template/: my_eval.py
src/user_components/example_eval/: README.md  example_scenario.py  helm_example_run_specs.py  requirements.txt
(+1 files in other folders)
